--- a/experimental/dotnet/testdata/dotnet-testapp6-0_runtime.yaml
+++ b/experimental/dotnet/testdata/dotnet-testapp6-0_runtime.yaml
@@ -8,6 +8,6 @@ commandTests:
   exitCode: 145
 - name: dotnet-asp-run
   command: "dotnet"
-  args: ["/asp-app/AspTestApp.dll"]
+  args: ["/app/AspTestApp.dll"]
   expectedError: ["It was not possible to find any compatible framework version"]
   exitCode: 150
