--- a/experimental/dotnet/testdata/dotnet-testapp6-0_sdk.yaml
+++ b/experimental/dotnet/testdata/dotnet-testapp6-0_sdk.yaml
@@ -7,5 +7,5 @@ commandTests:
   - "Build succeeded."
 - name: dotnet-asp-run
   command: "dotnet"
-  args: ["/asp-app/AspTestApp.dll"]
+  args: ["/app/AspTestApp.dll"]
   expectedOutput: ["I'm an Active Server Page"]
