Added s390x support for Java Docker images
Signed-off-by: Dirk Haubenreisser <haubenr@de.ibm.com>

--- a/debian_packages.yaml
+++ b/debian_packages.yaml
@@ -42,7 +42,7 @@
 
 # python and java only build on a subset of architectures
 - distros: ["debian11"]
-  archs: ["amd64","arm64"]
+  archs: ["amd64","arm64","s390x"]
   packages:
   # python
     - "dash"
