--- a/java/BUILD
+++ b/java/BUILD
@@ -15,6 +15,8 @@ USERS = [
     "nonroot",
 ]
 
+JAVA_ARCHITECTURES = ARCHITECTURES + ["s390x"]
+
 JAVA_VERSIONS = [
     "11",
     "17",
@@ -26,7 +28,7 @@ JAVA_VERSIONS = [
         cacerts_tar = "//base:cacerts_" + arch + "_" + distro,
     )
     for distro in DISTROS
-    for arch in ARCHITECTURES
+    for arch in JAVA_ARCHITECTURES
 ]
 
 [
@@ -64,7 +66,7 @@ JAVA_VERSIONS = [
     ]
     for user in USERS
     for distro in DISTROS
-    for arch in ARCHITECTURES
+    for arch in JAVA_ARCHITECTURES
 ]
 
 [
@@ -87,7 +89,7 @@ JAVA_VERSIONS = [
         symlinks = {"/usr/bin/java": "/usr/lib/jvm/java-" + java_version + "-openjdk-" + arch + "/bin/java"},
     )
     for java_version in JAVA_VERSIONS
-    for arch in ARCHITECTURES
+    for arch in JAVA_ARCHITECTURES
     for distro in DISTROS
     for user in USERS
 ]
@@ -120,7 +122,7 @@ JAVA_VERSIONS = [
     )
     for user in USERS
     for java_version in JAVA_VERSIONS
-    for arch in ARCHITECTURES
+    for arch in JAVA_ARCHITECTURES
     for distro in DISTROS
 ]
 
@@ -138,7 +140,7 @@ JAVA_VERSIONS = [
         "",
         "_debug",
     ]
-    for arch in ARCHITECTURES
+    for arch in JAVA_ARCHITECTURES
     for user in USERS
     for distro in DISTROS
 ]
@@ -154,7 +156,7 @@ JAVA_VERSIONS = [
         ],
     )
     for java_version in JAVA_VERSIONS
-    for arch in ARCHITECTURES
+    for arch in JAVA_ARCHITECTURES
     for distro in DISTROS
     for user in USERS
 ]
@@ -170,7 +172,7 @@ JAVA_VERSIONS = [
         ],
     )
     for java_version in JAVA_VERSIONS
-    for arch in ARCHITECTURES
+    for arch in JAVA_ARCHITECTURES
     for distro in DISTROS
     for user in USERS
 ]
