Fixed buildifier violations
Signed-off-by: Dirk Haubenreisser <haubenr@de.ibm.com>

--- a/java/BUILD
+++ b/java/BUILD
@@ -15,7 +15,10 @@ USERS = [
     "nonroot",
 ]
 
-JAVA_ARCHITECTURES = ARCHITECTURES + ["s390x", "ppc64le"]
+JAVA_ARCHITECTURES = ARCHITECTURES + [
+    "s390x",
+    "ppc64le",
+]
 
 JAVA_VERSIONS = [
     "11",
