--- a/build_tar/BUILD
+++ b/build_tar/BUILD
@@ -1,32 +1,15 @@
 # -*- coding: utf-8 -*-
-load("@rules_python//python:defs.bzl", "py_binary", "py_library")
-
-py_library(
-    name = "archive",
-    srcs = [
-        "__init__.py",
-        "archive.py",
-    ],
-    srcs_version = "PY3",
-)
-
-py_library(
-    name = "helpers",
-    srcs = [
-        "__init__.py",
-        "helpers.py",
-    ],
-    srcs_version = "PY3",
-)
+load("@rules_python//python:defs.bzl", "py_binary")
 
 py_binary(
     name = "build_tar",
-    srcs = ["build_tar.py"],
+    srcs = [
+        "__init__.py",
+        "archive.py",
+        "build_tar.py",
+        "helpers.py",
+    ],
     python_version = "PY3",
     srcs_version = "PY3",
     visibility = ["//visibility:public"],
-    deps = [
-        ":archive",
-        ":helpers",
-    ],
 )
