--- a/.github/workflows/ci-cache.yaml
+++ b/.github/workflows/ci-cache.yaml
@@ -1,11 +1,11 @@
 name: cache CI
 
-on:
-  workflow_dispatch: # Allow manual runs.
-  pull_request:
-    branches: [ 'main' ]
-  push:
-    branches: [ 'main' ]
+on: []
+#  workflow_dispatch: # Allow manual runs.
+#  pull_request:
+#    branches: [ 'main' ]
+#  push:
+#    branches: [ 'main' ]
 
 jobs:
   build-and-test:
