--- a/.github/workflows/ci-pkg-mgr.yaml
+++ b/.github/workflows/ci-pkg-mgr.yaml
@@ -1,11 +1,11 @@
 name: package manager CI
 
-on:
-  workflow_dispatch: # Allow manual runs.
-  pull_request:
-    branches: [ 'main' ]
-  push:
-    branches: [ 'main' ]
+on: []
+#  workflow_dispatch: # Allow manual runs.
+#  pull_request:
+#    branches: [ 'main' ]
+#  push:
+#    branches: [ 'main' ]
 
 jobs:
   build-and-test:
