--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -1,8 +1,8 @@
 name: Examples
 
-on:
-  pull_request:
-    branches: [ 'main' ]
+on: []
+#  pull_request:
+#    branches: [ 'main' ]
 
 jobs:
   examples:
