--- a/.github/workflows/scorecards-analysis.yml
+++ b/.github/workflows/scorecards-analysis.yml
@@ -1,11 +1,11 @@
 name: Scorecards supply-chain security
-on: 
-  # Only the default branch is supported.
-  branch_protection_rule:
-  schedule:
-    - cron: '38 10 * * 1'
-  push:
-    branches: [ main ]
+on: []
+#  # Only the default branch is supported.
+#  branch_protection_rule:
+#  schedule:
+#    - cron: '38 10 * * 1'
+#  push:
+#    branches: [ main ]
 
 # Declare default permissions as read only.
 permissions: read-all
