Add update util

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /experimental/dotnet/testdata/TestApp/obj/
 /experimental/dotnet/testdata/AspTestApp/bin/
 /experimental/dotnet/testdata/AspTestApp/obj/
+/dotnet-utils/dotnet-update/bin/
+/dotnet-utils/dotnet-update/obj/
