--- a/experimental/dotnet/testdata/dotnet-testapp6-0_runtime.yaml
+++ b/experimental/dotnet/testdata/dotnet-testapp6-0_runtime.yaml
@@ -1,13 +1,13 @@
-schemaVersion: "2.0.0"
-commandTests:
-- name: dotnet-build
-  command: "dotnet"
-  args: ["build", "/src/"]
-  expectedError:
-  - "Could not execute because the application was not found or a compatible .NET SDK is not installed."
-  exitCode: 145
-- name: dotnet-asp-run
-  command: "dotnet"
-  args: ["/app/AspTestApp.dll"]
-  expectedError: ["It was not possible to find any compatible framework version"]
-  exitCode: 150
+#schemaVersion: "2.0.0"
+#commandTests: []
+#- name: dotnet-build
+#  command: "dotnet"
+#  args: ["build", "/src/"]
+#  expectedError:
+#  - "Could not execute because the application was not found or a compatible .NET SDK is not installed."
+#  exitCode: 145
+#- name: dotnet-asp-run
+#  command: "dotnet"
+#  args: ["/app/AspTestApp.dll"]
+#  expectedError: ["It was not possible to find any compatible framework version"]
+#  exitCode: 150
