Add nonroot to nodejs BUILD

--- a/nodejs/BUILD
+++ b/nodejs/BUILD
@@ -9,15 +9,19 @@ NODEJS_MAJOR_VERISONS = ("14", "16", "18")
 
 [
     container_image(
-        name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + "_" + distro,
+        name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro,
         architecture = arch,
-        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_root_" + arch + "_" + distro,
+        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_" + user + "_" + arch + "_" + distro,
         entrypoint = ["/nodejs/bin/node"],
         tars = ["@nodejs" + major_version + "_" + arch + "//:tar"],
     )
     for mode in [
         "",
         "_debug",
+    ]
+    for user in [
+        "root",
+        "nonroot",
     ]
     for major_version in NODEJS_MAJOR_VERISONS
     for arch in ARCHITECTURES
