--- a/examples/nodejs/testdata/hello.yaml
+++ b/examples/nodejs/testdata/hello.yaml
@@ -1,5 +1,5 @@
 schemaVersion: "1.0.0"
 commandTests:
   - name: hello
-    command: ["/nodejs/bin/node", "hello.js"]
+    command: ["/nodejs/bin/node", "/hello.js"]
     expectedOutput: ['Hello World']
