--- a/experimental/dotnet/testdata/dotnet-slim-testapp6-0.yaml
+++ b/experimental/dotnet/testdata/dotnet-slim-testapp6-0.yaml
@@ -8,6 +8,10 @@ commandTests:
   command: "dotnet"
   args: ["/app/TestApp.dll", "gzip"]
   expectedOutput: ['Success! Error: .*']
+- name: test-tzdata
+  command: "dotnet"
+  args: ["/app/TestApp.dll", "tzdata"]
+  expectedOutput: ['Success! Error: .*']
 - name: test-i18n
   command: "dotnet"
   args: ["/app/TestApp.dll", "i18n"]
