--- a/dotnet-utils/dotnet-update/dotnet-update.csproj
+++ b/dotnet-utils/dotnet-update/dotnet-update.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
-        <RootNamespace>dotnet_update</RootNamespace>
+        <RootNamespace>DotnetUpdate</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
