Fix some warnings

--- a/dotnet-utils/dotnet-update/dotnet-update.csproj
+++ b/dotnet-utils/dotnet-update/dotnet-update.csproj
@@ -5,7 +5,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>DotnetUpdate</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>annotations</Nullable>
         <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
