Ignore s390x and ppc64le security indexes debian10
- They don't seem to be published anymore
- We will probably see some regressions in versions
  for those architectures unfortunately
- Better to not keep the rest of distroless hostage
  on this
- also disable gcs-cacher

Signed-off-by: Appu Goundan <appu@google.com>

--- a/.github/workflows/ci-cache.yaml
+++ b/.github/workflows/ci-cache.yaml
@@ -1,11 +1,7 @@
 name: cache CI
 
 on:
-  workflow_dispatch: # Allow manual runs.
-  pull_request:
-    branches: [ 'main' ]
-  push:
-    branches: [ 'main' ]
+  workflow_dispatch: # Allow manual runs
 
 jobs:
   build-and-test:
