fix: Support distro-specific locale path
Signed-off-by: Naoki Ikeguchi (YUMEMI Inc.) <n_ikeguchi@yumemi.co.jp>

--- a/locale/BUILD
+++ b/locale/BUILD
@@ -5,10 +5,16 @@ load("//base:base.bzl", "deb_file")
 load("//:checksums.bzl", "ARCHITECTURES")
 load(":locale.bzl", "locale")
 
+DISTRO_LOCALE_PATH = {
+    "debian11": "/usr/lib/locale/C.UTF-8",
+    "debian12": "/usr/lib/locale/C.utf8",
+}
+
 [
     locale(
         name = "locale_" + arch + "_" + distro,
         deb = deb_file(arch, distro, "libc-bin"),
+        path = DISTRO_LOCALE_PATH[distro],
     )
     for arch in ARCHITECTURES
     for distro in DISTROS
