--- a/examples/nodejs/node-express/Dockerfile
+++ b/examples/nodejs/node-express/Dockerfile
@@ -3,7 +3,7 @@ ADD . /app
 WORKDIR /app
 RUN npm install --omit=dev
 
-FROM gcr.io/distroless/nodejs:18
+FROM gcr.io/distroless/nodejs18-debian11
 COPY --from=build-env /app /app
 WORKDIR /app
 EXPOSE 3000
