--- a/examples/nodejs/Dockerfile
+++ b/examples/nodejs/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 RUN npm ci --omit=dev
 
-FROM gcr.io/distroless/nodejs18-debian11
+FROM gcr.io/distroless/nodejs:18
 COPY --from=build-env /app /app
 WORKDIR /app
 CMD ["hello.js"]
